--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>eclipselink</artifactId>
 			<version>2.6.4</version>
 		</dependency>	
+		
+		<dependency>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
 
 
 	</dependencies>
