--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,10 @@
 	
 	<dependencies>
       	<dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-bus-kafka</artifactId>
-        </dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>1.2.0.RELEASE</version>
+		</dependency>
         
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
