Con BDD en remoto

--- a/pom.xml
+++ b/pom.xml
@@ -58,16 +58,29 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		
-		 <dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.1.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		
-		<!--  <dependency>
-    		<groupId>org.hsqldb</groupId>
-    		<artifactId>hsqldb</artifactId>
-    		<version>2.3.1</version>
-		</dependency>-->
+		<dependency>
+		    <groupId>com.heroku.api</groupId>
+		    <artifactId>heroku-api</artifactId>
+		    <version>0.18</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.heroku.api</groupId>
+		    <artifactId>heroku-json-jackson</artifactId>
+		    <version>0.18</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.heroku.api</groupId>
+		    <artifactId>heroku-http-apache</artifactId>
+		    <version>0.18</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>info.cukes</groupId>
